// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumSig should create propose envelope 1`] = `
{
  "data": {
    "authenticator": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
    "executionParams": "0x00",
    "executor": {
      "address": "0x6241b5c89350bb3c465179706cf26050ea32444f",
      "index": 0,
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0xf3e55d22845689be3e062975444d09799e522a6c",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 5,
      "name": "snapshot-x",
      "verifyingContract": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
      "version": "0.1.0",
    },
    "message": {
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "index": 0,
        "params": "0x00",
      },
      "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "salt": 0,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
    },
    "signature": "0x880baf7f259fa851874968dbe0f0fcb97f2144873741e1ee18b1c23fc0b386192027af9e9b9f918a65490cf9a1d79cfe4e42c4025a1ca9553f50e17aa13b521c1b",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Propose": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "author",
          "type": "address",
        },
        {
          "name": "metadataUri",
          "type": "string",
        },
        {
          "name": "executionStrategy",
          "type": "IndexedStrategy",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "salt",
          "type": "uint256",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
    "choice": 1,
    "metadataUri": "",
    "proposal": 1,
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0xf3e55d22845689be3e062975444d09799e522a6c",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 5,
      "name": "snapshot-x",
      "verifyingContract": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
      "version": "0.1.0",
    },
    "message": {
      "choice": 1,
      "proposalId": 1,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
      "voteMetadataUri": "",
      "voter": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    },
    "signature": "0x9367c563148fb7daecc2316800c220198c07015c9c613f7bd934c051f5e2c2cf3e6e695b697718c7a5acd92e5dac8594111a6dd315790a630e8fa3b06198b9271c",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Vote": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "voter",
          "type": "address",
        },
        {
          "name": "proposalId",
          "type": "uint256",
        },
        {
          "name": "choice",
          "type": "uint8",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "voteMetadataUri",
          "type": "string",
        },
      ],
    },
  },
}
`;
